Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19540

10.4 allow lock options with SELECT in brackets which previous version do not

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4.5
    • 10.4.6
    • Parser
    • None

    Description

      (select * from t1) for update;
      allowed.

      Attachments

        Activity

          revision-id: 53d1bde4487ab58d0a6ea1d7ad077f00c495ac82 (mariadb-10.4.4-116-g53d1bde4487)
          parent(s): fae1319450eea47e9bb6d33cf5134671931b5fdc
          author: Oleksandr Byelkin
          committer: Oleksandr Byelkin
          timestamp: 2019-05-21 15:33:35 +0200
          message:

          MDEV-19540: 10.4 allow lock options with SELECT in brackets which previous version do not

          Check locking options and brackets combinations.

          sanja Oleksandr Byelkin added a comment - revision-id: 53d1bde4487ab58d0a6ea1d7ad077f00c495ac82 (mariadb-10.4.4-116-g53d1bde4487) parent(s): fae1319450eea47e9bb6d33cf5134671931b5fdc author: Oleksandr Byelkin committer: Oleksandr Byelkin timestamp: 2019-05-21 15:33:35 +0200 message: MDEV-19540 : 10.4 allow lock options with SELECT in brackets which previous version do not Check locking options and brackets combinations. —

          Ok to push

          bar Alexander Barkov added a comment - Ok to push

          People

            sanja Oleksandr Byelkin
            sanja Oleksandr Byelkin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.