MDEV-19540: 10.4 allow lock options with SELECT in brackets which previous version do not

Check locking options and brackets combinations.